--- a/디공(디비공부)/1_정규화와 비정규화.md
+++ b/디공(디비공부)/1_정규화와 비정규화.md
@@ -1,16 +1,5 @@
-📌 참고 (Note)
-⚠️ 경고 (Warning)
-ℹ️ 정보 (Info)
-✅ 완료 (Completed)
-🚀 시작 (Start)
-🛑 중지 (Stop)
-🔄 업데이트 (Update)
-🔥 중요 (Important)
-📝 작업 (Task)
-🕒 시간 (Time)
-
-
-## 키의 종류   📝[출처](https://limkydev.tistory.com/108)
+## 키의 종류
+📝[출처](https://limkydev.tistory.com/108)
 📌 **`키의 종류`는 `후보키`, `기본키`, `대체키`, `슈퍼키`, `외래키`가 있다.**
 
 >후보키(Candidate Key)
@@ -67,7 +56,8 @@ NULL과 중복을 허용한다.
 속성집합키를 Composite Key라고 한다.
 ![alt text](image.png)
 
-## `정규화`
+
+## 정규화
 📌 **`정규화` :: 관련된 개념 :: `DB의 중복` :: `Data의 무결성`**
 
 
@@ -122,3 +112,18 @@ NULL과 중복을 허용한다.
 
 ---
 공사중
+
+
+
+
+
+📌 참고 (Note)
+⚠️ 경고 (Warning)
+ℹ️ 정보 (Info)
+✅ 완료 (Completed)
+🚀 시작 (Start)
+🛑 중지 (Stop)
+🔄 업데이트 (Update)
+🔥 중요 (Important)
+📝 작업 (Task)
+🕒 시간 (Time)
