--- a/디공(디비공부)/1_정규화와 비정규화(미완).md
+++ b/디공(디비공부)/1_정규화와 비정규화(미완).md
@@ -2,7 +2,7 @@
 📝[출처](https://limkydev.tistory.com/108)
 📌 **`키의 종류`는 `후보키`, `기본키`, `대체키`, `슈퍼키`, `외래키`가 있다.**
 
->후보키(Candidate Key)
+#### 후보키(Candidate Key)
 
 릴레이션을 구성하는 속성들 중에서 튜플을 유일하게 식별할 수 있는 속성들의 부분집합을 의미한다.
 모든 릴레이션은 반드시 하나 이상의 후보키를 가진다.
@@ -16,7 +16,7 @@
 
 *`최소성` : 후보키가 유일성을 유지하기 위한 최소한의 속성 집합임을 의미
 
->기본키(Primary Key)
+#### 기본키(Primary Key)
 
 후보키 중에서 선택한 Main Key이다.
 
@@ -24,15 +24,15 @@
 
 *`개체 무결성 제약 조건 : 1. 중복안됨 2. NULL값 안됨` 
 
->대체키
+#### 대체키
 
 `기본키로 선택되지 못한 후보키`
 
->슈퍼키
+#### 슈퍼키
 
 `하나 이상의 속성들로 구성된 키`
 
->외래키
+#### 외래키
 
 `다른 릴레이션의 기본키를 참조하는 키`
 
@@ -50,7 +50,7 @@ NULL과 중복을 허용한다.
 *참조 무결성(Referential Integrity) 제약 조건 : 
 
 
->속성집합키
+#### 속성집합키
 
 키는 속성집합이 될 수 있음. 
 속성집합키를 Composite Key라고 한다.
